<resources>
    <string name="app_name">ProyectoPDM</string>
    <string name="title_activity_menu_opciones">MenuOpcionesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

<<<<<<< HEAD
    <string name="menu_inicio">Inicio</string>
    <string name="menu_miperfil">Mi perfil</string>
    <string name="menu_proyectos">Proyectos</string>
    <string name="menu_recordacademico">Record Academico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

=======
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_proyectos">Proyectos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragmentestudiante">FragmentEstudiante</string>
    <string name="fragmentbitacora">FragmentBitacora</string>
>>>>>>> luis123
</resources>