<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_baseline_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_miperfil"
            android:icon="@drawable/ic_baseline_user"
            android:title="@string/menu_miperfil" />
        <item
            android:id="@+id/nav_proyectos"
            android:icon="@drawable/ic_baseline_folder"
            android:title="@string/menu_proyectos" />
        <item
            android:id="@+id/recordAcademicoFragment"
            android:icon="@drawable/ic_baseline_recordacademico"
            android:title="@string/menu_recordacademico" />

        <item
            android:id="@+id/bitacoraFragment"
            android:icon="@drawable/ic_proyectos"
            android:title="@string/fragmentbitacora" />

        <item
            android:id="@+id/nav_estudiantes"
            android:icon="@drawable/ic_estudiante"
            android:title="@string/fragmentestudiante" />

    </group>
</menu>