<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.proyectopdm.ui.Inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_miperfil"
        android:name="com.example.proyectopdm.ui.miperfil.MiPerfilFragment"
        android:label="@string/menu_miperfil"
        tools:layout="@layout/fragment_miperfil" />

    <fragment
        android:id="@+id/nav_proyectos"
        android:name="com.example.proyectopdm.ui.proyectos.proyectosFragment"
        android:label="@string/menu_proyectos"
        tools:layout="@layout/fragment_proyectos" />
    <fragment
        android:id="@+id/recordAcademicoFragment"
        android:name="com.example.proyectopdm.RecordAcademicoFragment"
        android:label="@string/menu_recordacademico"
        tools:layout="@layout/fragment_record_academico" />

    <fragment
        android:id="@+id/bitacoraFragment"
        android:name="com.example.proyectopdm.BitacoraFragment"
        android:label="fragment_bitacora"
        tools:layout="@layout/fragment_bitacora" />
    <fragment
        android:id="@+id/nav_estudiantes"
        android:name="com.example.proyectopdm.nav_estudiantes"
        android:label="@string/fragmentestudiante"
        tools:layout="@layout/fragment_nav_estudiantes" />

</navigation>